# works-server

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  cloudbuild.yaml  k8s.api.prod.yaml  k8s.api.yaml  k8s.prod.yaml  k8s.yaml
app-api/: Cargo.toml
app-api/src/: main.rs
app-batch/: Cargo.toml
app-batch/src/: main.rs
app-core/: Cargo.toml
app-core/src/: ddb.rs  domain.rs  errors.rs  firebase.rs  graphql.rs  lib.rs  misoca.rs  task.rs  util.rs
app-core/src/ddb/: bank.rs  invoice.rs  pager.rs  schema.rs  sender.rs  supplier.rs  user.rs
app-core/src/domain/: bank.rs  sender.rs  service.rs  supplier.rs
app-core/src/domain/service/: get_misoca_token.rs  sync_invoice.rs
app-core/src/firebase/: auth.rs
app-core/src/graphql/: bank.rs  get_misoca_token.rs  invoice.rs  invoice_history.rs  me.rs  mutation.rs  page_info.rs  query.rs  schema.graphql  sender.rs  supplier.rs  sync_invoice.rs
app-core/src/misoca/: contact.rs  invoice.rs  tokens.rs
app-core/src/task/: create_invoice.rs  get_misoca_token.rs  sync_invoice.rs
db/initdb.d/: 1_ddl.sql
oauth/callback/: .firebaserc
oauth/callback/public/: index.html
scripts/: deploy.sh  deploy_secret.sh  setup_infra.sh
src/: ddb.rs  domain.rs  firebase.rs  graphql.rs  main.rs  misoca.rs  util.rs
src/ddb/: invoice.rs  schema.rs  supplier.rs  user.rs
src/domain/: invoice.rs  supplier.rs  user.rs
src/graphql/: invoice.rs  me.rs  mutation.rs  query.rs  schema.graphql  supplier.rs
