[package]
name = "app-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
tokio = { version = "0.2", features = ["time"] }
juniper = "0.15.3"
juniper-from-schema = { git = "https://github.com/davidpdrsn/juniper-from-schema.git" }
async-trait = "0.1.48"
uuid = { version = "0.8", features = ["serde", "v4"] }
diesel = { version = "1.4.5", features = ["mysql", "chrono"] }
diesel_migrations = "1.4.0"
serde = "1.0.125"
chrono = { version = "0.4", features = ["serde"]}
thiserror = "1.0.24"
jsonwebtoken = "7.2.0"
reqwest = { version = "0.10.10", features = ["json"] }
serde_json = "1.0.64"
derive_more = "0.99.13"
cloud-storage = "0.6"
convert_case = "0.4.0"
strum_macros = "0.21.1"
